training_run.log
nohup: ignoring input
W0514 23:32:19.814790 24142 site-packages/torch/distributed/run.py:793] 
W0514 23:32:19.814790 24142 site-packages/torch/distributed/run.py:793] *****************************************
W0514 23:32:19.814790 24142 site-packages/torch/distributed/run.py:793] Setting OMP_NUM_THREADS environment variable for each process to be 1 in default, to avoid your system being overloaded, please further tune the variable for optimal performance in your application as needed. 
W0514 23:32:19.814790 24142 site-packages/torch/distributed/run.py:793] *****************************************
  File "/home/chenli/weber/Video-Swin-Transformer/main/train.py", line 242
    print(f"最佳验证损失为{best_val_loss:.4f},最佳验证dice为{best_val_dice:.4f},最佳训练轮次为{best_epoch+1}，
                                                                                                                                  ^
SyntaxError: EOL while scanning string literal
  File "/home/chenli/weber/Video-Swin-Transformer/main/train.py", line 242
    print(f"最佳验证损失为{best_val_loss:.4f},最佳验证dice为{best_val_dice:.4f},最佳训练轮次为{best_epoch+1}，
                                                                                                                                  ^
SyntaxError: EOL while scanning string literal
  File "/home/chenli/weber/Video-Swin-Transformer/main/train.py", line 242
    print(f"最佳验证损失为{best_val_loss:.4f},最佳验证dice为{best_val_dice:.4f},最佳训练轮次为{best_epoch+1}，
                                                                                                                                  ^
SyntaxError: EOL while scanning string literal
  File "/home/chenli/weber/Video-Swin-Transformer/main/train.py", line 242
    print(f"最佳验证损失为{best_val_loss:.4f},最佳验证dice为{best_val_dice:.4f},最佳训练轮次为{best_epoch+1}，
                                                                                                                                  ^
SyntaxError: EOL while scanning string literal
E0514 23:32:20.061623 24142 site-packages/torch/distributed/elastic/multiprocessing/api.py:869] failed (exitcode: 1) local_rank: 0 (pid: 24169) of binary: /home/chenli/myenvs/my_project_env/bin/python
Traceback (most recent call last):
  File "/home/chenli/myenvs/my_project_env/bin/torchrun", line 11, in <module>
    sys.exit(main())
  File "/home/chenli/myenvs/my_project_env/lib/python3.9/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py", line 355, in wrapper
    return f(*args, **kwargs)
  File "/home/chenli/myenvs/my_project_env/lib/python3.9/site-packages/torch/distributed/run.py", line 919, in main
    run(args)
  File "/home/chenli/myenvs/my_project_env/lib/python3.9/site-packages/torch/distributed/run.py", line 910, in run
    elastic_launch(
  File "/home/chenli/myenvs/my_project_env/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 138, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
  File "/home/chenli/myenvs/my_project_env/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 269, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
main/train.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2025-05-14_23:32:20
  host      : amax
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 24170)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2025-05-14_23:32:20
  host      : amax
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 24171)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2025-05-14_23:32:20
  host      : amax
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 24172)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2025-05-14_23:32:20
  host      : amax
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 24169)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
